--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -81,7 +81,10 @@ jobs:
           libXcomposite-devel \
           libwayland-client \
           libevdev-devel \
+          kernel-devel linux-headers \
           libXrandr-devel \
+          wayland-scanner \
+          wayland-utils \
           && yum clean all
         
         # Use Python 3.11 from /opt/python
