--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -81,7 +81,7 @@ jobs:
           libXcomposite-devel \
           libwayland-client \
           libevdev-devel \
-          kernel-devel linux-headers \
+          kernel-devel \
           libXrandr-devel \
           wayland-scanner \
           wayland-utils \
