--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -89,13 +89,17 @@ jobs:
         export PATH=\$PYTHON_ROOT/bin:\$PATH
         export PYTHON_EXECUTABLE=\$PYTHON_ROOT/bin/python
         
+        \$PYTHON_EXECUTABLE -m pip install --upgrade pip
+        \$PYTHON_EXECUTABLE -m pip install -r requirements.txt
+        \$PYTHON_EXECUTABLE -m pip install cmake build auditwheel
+        
         # CMake configuration for module development
         \$PYTHON_EXECUTABLE -m cmake \
           -DPython3_ROOT_DIR=\$PYTHON_ROOT \
           -DPython3_EXECUTABLE=\$PYTHON_EXECUTABLE \
           -DPYBIND11_PYTHON_VERSION=3.11 \
-          -DCMAKE_C_FLAGS=\"-D_POSIX_C_SOURCE=200809L\" \
-          -DCMAKE_CXX_FLAGS=\"-D_POSIX_C_SOURCE=200809L\" \
+          -DCMAKE_C_FLAGS=\"-D_POSIX_C_SOURCE=200809L -Wno-deprecated-declarations\" \
+          -DCMAKE_CXX_FLAGS=\"-D_POSIX_C_SOURCE=200809L -Wno-deprecated-declarations\" \
           -S . -B build -DCMAKE_BUILD_TYPE=Release
         
         \$PYTHON_EXECUTABLE -m cmake --build build --config Release
