--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -16,41 +16,35 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
-
+  
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5.1.1
       with:
         python-version: ${{ matrix.python-version }}
-
+  
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+        pip install build twine
+  
     - name: Configure CMake
-      shell: pwsh
       run: |
         $env:PYTHON_EXECUTABLE = (Get-Command python).Path
-        cmake -DPYBIND11_PYTHON_VERSION="${{ matrix.python-version }}" `
-        -DPython3_ROOT_DIR="$env:PYTHONLOCATION" `
-        -DPython3_EXECUTABLE="$env:PYTHON_EXECUTABLE" `
-        -DPython_FIND_STRATEGY=LOCATION `
-        -DPython_FIND_REGISTRY=NEVER `
-        -DPython_FIND_FRAMEWORK=NEVER `
-        -S . -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
-
+        $env:PYTHON_VERSION = (python -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")
+        echo "Python version: $env:PYTHON_VERSION"
+        echo "Python executable: $env:PYTHON_EXECUTABLE"
+        cmake -DPYBIND11_PYTHON_VERSION="$env:PYTHON_VERSION" -DPython3_ROOT_DIR="$env:PYTHONLOCATION" -DPython3_EXECUTABLE="$env:PYTHON_EXECUTABLE" -DPython_FIND_STRATEGY=LOCATION -DPython_FIND_REGISTRY=NEVER -DPython_FIND_FRAMEWORK=NEVER -S . -B ${{ github.workspace }}/build -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
+  
     - name: Build
       run: cmake --build ${{ github.workspace }}/build --config ${{ env.BUILD_TYPE }}
-
+  
     - name: Build Wheel
       run: python -m build -w ./PythonBuild
-
-    - name: Install Twine
-      run: python -m pip install twine
-
+  
     - name: Publish on PyPI
       run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} PythonBuild/dist/* --verbose --disable-progress-bar
-  
+
   build-manylinux:
     runs-on: ubuntu-latest
     strategy:
