--- a/.github/workflows/build-and-deploy-to-pypi.yml
+++ b/.github/workflows/build-and-deploy-to-pypi.yml
@@ -50,7 +50,7 @@ jobs:
   
         while (-not $success -and $retryCount -lt $maxRetries) {
           try {
-            python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p "${{ secrets.PYPI_REPO_TOKEN }}" PythonBuild/dist/* --verbose --disable-progress-bar
+            python -m twine upload -u __token__ -p "${{ secrets.PYPI_REPO_TOKEN }}" PythonBuild/dist/* --verbose --disable-progress-bar
             $success = $true
           }
           catch {
@@ -122,4 +122,4 @@ jobs:
       run: pip install twine
   
     - name: Publish on PyPI
-      run: python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl
+      run: python -m twine upload -u __token__ -p ${{ secrets.PYPI_REPO_TOKEN }} wheelhouse/*.whl
