Bug fixes + profiling

--- a/TensorFrost/CMakeLists.txt
+++ b/TensorFrost/CMakeLists.txt
@@ -48,5 +48,10 @@ set_target_properties(TensorFrost PROPERTIES
     VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
 )
 
+# Set /PROFILE for RELWITHDEBINFO
+set_target_properties(TensorFrost PROPERTIES
+    LINK_FLAGS_RELWITHDEBINFO "/PROFILE"
+)
+
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "Source Files" FILES ${TENSORFROST_SOURCE_LIST} ${TENSORFROST_HEADER_LIST})
 
