--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -14,12 +14,10 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install system dependencies and update MESA
+      - name: Install system dependencies
         run: |
-          sudo add-apt-repository ppa:kisak/kisak-mesa -y
           sudo apt-get update
-          sudo apt-get install -y libglfw3-dev xvfb
-          sudo apt-get upgrade -y
+          sudo apt-get install -y libglfw3-dev libgl1-mesa-dev xvfb
 
       - name: Install PyTorch
         run: |
