--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -6,8 +6,21 @@ on:
 jobs:
   test-tensorfrost:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['cp37-cp37m', 'cp38-cp38', 'cp39-cp39', 'cp310-cp310', 'cp311-cp311', 'cp312-cp312']
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Set up Docker
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build TensorFrost with Docker
+        run: |
+          docker build -t tensorfrost-manylinux .
+          docker run --rm -e PYTHON_VERSION=${{ matrix.python-version }} -v $(pwd):/io tensorfrost-manylinux
 
       - name: Set up Python
         uses: actions/setup-python@v2
@@ -23,9 +36,9 @@ jobs:
         run: |
           pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
 
-      - name: Install TensorFrost
+      - name: Install built TensorFrost wheel
         run: |
-          pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ tensorfrost
+          pip install wheelhouse/*.whl
 
       - name: Install test dependencies
         run: |
