--- a/.github/workflows/autotests.yml
+++ b/.github/workflows/autotests.yml
@@ -14,6 +14,11 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
