--- a/.github/workflows/upload_to_test_pypi.yml
+++ b/.github/workflows/upload_to_test_pypi.yml
@@ -1,7 +1,7 @@
 name: Upload to TestPyPI
 
 on:
-  workflow_dispatch:  # This allows only manual triggering
+  workflow_dispatch:
 
 jobs:
   upload-to-pypi:
@@ -11,31 +11,65 @@ jobs:
       uses: actions/github-script@v6
       with:
         script: |
+          const fs = require('fs');
+          
           async function downloadArtifact(workflowName, artifactName) {
-            const allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
+            const allWorkflowRuns = await github.rest.actions.listWorkflowRuns({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              run_id: context.runId
+              workflow_id: workflowName,
+              status: 'success'
             });
-            const matchingArtifact = allArtifacts.data.artifacts.find((artifact) => {
-              return artifact.name == artifactName
+            
+            if (allWorkflowRuns.data.total_count === 0) {
+              console.log(`No successful runs found for workflow: ${workflowName}`);
+              return false;
+            }
+            
+            const latestRun = allWorkflowRuns.data.workflow_runs[0];
+            
+            const artifacts = await github.rest.actions.listWorkflowRunArtifacts({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: latestRun.id
             });
+            
+            const matchingArtifact = artifacts.data.artifacts.find((artifact) => artifact.name === artifactName);
+            
+            if (!matchingArtifact) {
+              console.log(`No artifact found with name: ${artifactName} in workflow: ${workflowName}`);
+              return false;
+            }
+            
             const download = await github.rest.actions.downloadArtifact({
               owner: context.repo.owner,
               repo: context.repo.repo,
               artifact_id: matchingArtifact.id,
               archive_format: 'zip',
             });
-            const fs = require('fs');
-            fs.writeFileSync('${{github.workspace}}/' + artifactName + '.zip', Buffer.from(download.data));
+            
+            fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/${artifactName}.zip`, Buffer.from(download.data));
+            console.log(`Successfully downloaded: ${artifactName}.zip`);
+            return true;
           }
-          await downloadArtifact("Build Windows Wheels", "windows-wheels");
-          await downloadArtifact("Build Manylinux Wheels", "manylinux-wheels");
+          
+          const windowsResult = await downloadArtifact("Build Windows Wheels", "windows-wheels");
+          const manylinuxResult = await downloadArtifact("Build Manylinux Wheels", "manylinux-wheels");
+          
+          if (!windowsResult && !manylinuxResult) {
+            core.setFailed("Failed to download any artifacts. Please ensure that the build workflows have run successfully.");
+          }
 
     - name: Unzip artifacts
       run: |
-        unzip -d windows-wheels windows-wheels.zip
-        unzip -d manylinux-wheels manylinux-wheels.zip
+        for zip in *.zip; do
+          if [ -f "$zip" ]; then
+            unzip -d "${zip%.zip}" "$zip"
+            echo "Unzipped $zip"
+          else
+            echo "No $zip file found"
+          fi
+        done
 
     - name: Install Twine
       run: pip install twine
@@ -45,4 +79,9 @@ jobs:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_REPO_TOKEN }}
       run: |
-        python -m twine upload --repository-url https://test.pypi.org/legacy/ windows-wheels/*.whl manylinux-wheels/*.whl --verbose --disable-progress-bar
+        if ls */*.whl 1> /dev/null 2>&1; then
+          python -m twine upload --repository-url https://test.pypi.org/legacy/ */*.whl --verbose --disable-progress-bar
+        else
+          echo "No wheel files found to upload"
+          exit 1
+        fi
