--- a/.github/workflows/upload_to_test_pypi.yml
+++ b/.github/workflows/upload_to_test_pypi.yml
@@ -14,6 +14,11 @@ jobs:
     - uses: actions/setup-python@v5
       with:
         python-version: '3.x'
+    - name: Download wheel artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: wheels
+        path: ./wheels
         
     - name: Install Twine
       run: pip install twine
