--- a/.github/workflows/upload_to_test_pypi.yml
+++ b/.github/workflows/upload_to_test_pypi.yml
@@ -25,5 +25,4 @@ jobs:
 
     - name: Upload to PyPI
       run: |
-        REPO_URL="https://test.pypi.org/legacy/"
-        twine upload --repository-url $REPO_URL --skip-existing wheels/* --verbose --disable-progress-bar -u __token__ -p ${{ secrets.TEST_PYPI_REPO_TOKEN }}
+        python -m twine upload --repository-url https://test.pypi.org/legacy/ -u __token__ -p ${{ secrets.TEST_PYPI_REPO_TOKEN }} wheels/* --skip-existing  --verbose --disable-progress-bar
