--- a/.github/workflows/build_manylinux.yml
+++ b/.github/workflows/build_manylinux.yml
@@ -25,5 +25,5 @@ jobs:
     - name: Upload wheels as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: manylinux-wheels
+        name: manylinux-wheels-py${{ matrix.python-version }}
         path: wheelhouse/*.whl
