--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -28,5 +28,5 @@ jobs:
     - name: Upload wheels as artifact
       uses: actions/upload-artifact@v4
       with:
-        name: windows-wheels
+        name: windows-wheels-py${{ matrix.python-version }}
         path: PythonBuild/dist/*.whl
