--- a/TensorFrost/CMakeLists.txt
+++ b/TensorFrost/CMakeLists.txt
@@ -32,7 +32,7 @@ target_include_directories(TensorFrost PRIVATE ${CMAKE_SOURCE_DIR}/external/rend
 add_custom_command(
     TARGET TensorFrost
     POST_BUILD
-    COMMAND ${Python3_EXECUTABLE} -m pip install -e PythonBuild/
+    COMMAND ${Python3_EXECUTABLE} -m pip install -e Python/
     WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
 )
 
