--- a/.github/workflows/build_windows.yaml
+++ b/.github/workflows/build_windows.yaml
@@ -29,4 +29,4 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: windows-wheels-py${{ matrix.python-version }}
-        path: PythonBuild/dist/*.whl
+        path: Python/dist/*.whl
