--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10, 3.11, 3.12]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
@@ -24,23 +24,31 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          # Also install build, cmake, pybind11, etc. as needed
-          pip install cmake build
+          pip install cmake build  # or other tools you need
 
-      - name: Configure and build with CMake
+      - name: Configure CMake
         run: |
-          # If you need to point CMake to your Python, do something like:
-          export PYTHON_EXECUTABLE=$(which python)
-          python --version
+          # Grab the path to the "python" selected by setup-python
+          export PYTHON_EXECUTABLE="$(which python)"
+
+          # Extract major.minor from the currently active Python
+          export PYTHON_VERSION="$(python -c "import sys; print(f'{sys.version_info.major}.{sys.version_info.minor}')")"
+
+          echo "Python version: $PYTHON_VERSION"
+          echo "Python executable: $PYTHON_EXECUTABLE"
 
           cmake \
-            -DPYBIND11_PYTHON_VERSION="$(python -c 'import sys; print(f"{sys.version_info.major}.{sys.version_info.minor}")')" \
-            -DPython3_EXECUTABLE="$PYTHON_EXECUTABLE" \
+            -DPYBIND11_PYTHON_VERSION="${PYTHON_VERSION}" \
+            -DPython3_EXECUTABLE="${PYTHON_EXECUTABLE}" \
+            -DPython_FIND_STRATEGY=LOCATION \
+            -DPython_FIND_REGISTRY=NEVER \
+            -DPython_FIND_FRAMEWORK=NEVER \
             -S . \
             -B build \
             -DCMAKE_BUILD_TYPE=Release
 
-          cmake --build build --config Release
+      - name: Build
+        run: cmake --build build --config Release
 
       - name: Build wheel
         run: |
